components/Thumbnail/Thumbnail.module.scss
@use '../../styles/globals.scss' as *;

.container {
  position: relative;
  max-width: 300px;
  line-height: 0;
  border-radius: 20px;
}

.img {
  border-radius: 20px;
}

.description {
  display: flex;
  align-items: flex-end;
  justify-content: center;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border-radius: 20px;
  @include h2;
  margin: 0;
  padding-bottom: 2rem;
  text-transform: capitalize;
  text-shadow: 0 0 20px $black;
  transition: 0.3s ease-in-out;

  &:hover {
    background-color: rgba(0, 0, 0, 0.3);
  }
}

